--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,15 @@
     height: 48px;
 }
 
+.btn-lg-circle2{
+    width: 48px;
+    height: 48px;
+    border-radius: 30px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
 .btn-square,
 .btn-sm-square,
 .btn-lg-square {
