--- a/css/style.css
+++ b/css/style.css
@@ -167,9 +167,9 @@
     background-size: cover;
 }
 
-.hero-header img {
+/* .hero-header img {
     animation: imgRotate 50s linear infinite;
-}
+} */
 
 @keyframes imgRotate { 
     100% { 
