--- a/css/style.css
+++ b/css/style.css
@@ -477,3 +477,112 @@
     padding-right: 0;
     border-right: none;
 }
+/*** Pricing Start ***/
+.pricing {
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/about-1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.pricing .pricing-item {
+    color: var(--bs-white);
+}
+
+.pricing .pricing-item .pricing-content {
+    background: rgba(255, 255, 255, 0.4);
+}
+
+.pricing .owl-carousel.pricing-carousel {
+    position: relative;
+}
+
+.pricing .owl-carousel.pricing-carousel .owl-nav {
+    position: absolute;
+    top: -60px;
+    right: 0;
+    display: flex;
+    font-size: 40px;
+    color: var(--bs-white);
+
+}
+
+.pricing .owl-carousel.pricing-carousel .owl-nav .owl-prev {
+    margin-right: 40px;
+}
+
+.pricing .owl-carousel.pricing-carousel .owl-nav .owl-prev,
+.pricing .owl-carousel.pricing-carousel .owl-nav .owl-next {
+    transition: 0.5s;
+}
+
+.pricing .owl-carousel.pricing-carousel .owl-nav .owl-prev:hover,
+.pricing .owl-carousel.pricing-carousel .owl-nav .owl-next:hover {
+    color: var(--bs-primary);
+}
+/*** Pricing End ***/
+
+.toggle-button {
+    display: flex; /* Display items in a row */
+    align-items: center; /* Align items vertically */
+}
+
+.label-left {
+    margin-right: 2px; /* Adjust the space between the left label and the toggle */
+}
+
+.label-right {
+    margin-left: 5px; /* Adjust the space between the toggle and the right label */
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    margin-right: 5px; /* Adjust the space between the toggle and the right label */
+}
+
+.switch input[type="checkbox"] {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    border-radius: 20px;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    border-radius: 50%;
+    transition: 0.4s;
+}
+
+input[type="checkbox"]:checked + .slider {
+    background-color: #f3e521;
+}
+
+input[type="checkbox"]:checked + .slider:before {
+    transform: translateX(20px);
+}
+
+  @media (min-width: 992px){
+    .toggle-button{
+        padding-left: 25%;
+    }
+  }
