--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,8 @@
 
 
 /*** Hero Header ***/
-.hero-header {
-    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(../img/bg-hero.jpg);
+.hero-head {
+    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(/img/bg-hero.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
