--- a/css/style2.css
+++ b/css/style2.css
@@ -46,3 +46,12 @@ margin-left: auto;
 .download{
     margin-bottom: 20px;
 }
+.message-box {
+    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(/img/bg-hero.jpg);
+    background-attachment: fixed;
+    min-height: 500px;
+
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
