--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,7 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(/img/bg-hero.jpg);
+    background: linear-gradient(rgba(22, 22, 22, 0.9), rgba(0, 0, 0, 0.9)), url(/img/testimonial-1.jpg);
     background-attachment: fixed;
     min-height: 500px;
 
